--- a/assets/css/sections.css
+++ b/assets/css/sections.css
@@ -282,7 +282,7 @@
 .about-text {
     font-size: var(--font-size-lg);
     line-height: var(--line-height-relaxed);
-    color: var(--color-gray-800);
+    color: var(--color-black);
 }
 
 .about-intro {
